# Cellular-Automaton

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Timer.h
src/: Game.cpp  Timer.cpp  main.cpp
